--- a/playground/package.json
+++ b/playground/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "micro-vite": "^1.0.0"
+  }
 }
