chore: setting for using micro-vite as cli

--- a/micro-vite/package.json
+++ b/micro-vite/package.json
@@ -7,6 +7,9 @@
     "build": "tsup src/index.ts",
     "watch": "tsup src/index.ts --watch"
   },
+  "bin": {
+    "micro-vite": "cli.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
