--- a/playground/package.json
+++ b/playground/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "micro-vite dev",
+    "build": "micro-vite build"
   },
   "keywords": [],
   "author": "",
