--- a/micro-vite/package.json
+++ b/micro-vite/package.json
@@ -14,9 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect": "^3.4.35",
+    "@types/connect-history-api-fallback": "^1.5.0",
     "tsup": "^7.1.0"
   },
   "dependencies": {
-    "cac": "^6.7.14"
+    "cac": "^6.7.14",
+    "connect": "^3.7.0",
+    "connect-history-api-fallback": "^2.0.0",
+    "sirv": "^2.0.3"
   }
 }
