--- a/micro-vite/package.json
+++ b/micro-vite/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "cac": "^6.7.14",
+    "chokidar": "^3.5.3",
     "connect": "^3.7.0",
     "connect-history-api-fallback": "^2.0.0",
     "node-html-parser": "^6.1.5",
